<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Homework_profile</string>
    <string name="my_activities">My Activities</string>
    <string name="cover_img">Cover Image</string>
    <string name="profile_img">Profile</string>
    <string name="ic_edit">Edit icon</string>
    <string name="myFirstName">Kry</string>
    <string name="myName">Sobothty</string>
    <string name="ITE">ITE</string>
    <string name="G9">G9</string>
    <string name="Generation">Generation</string>
    <string name="ITE_1">Year 1</string>
    <string name="ITE_2">Year 2</string>
    <string name="ITE_3">Year 3</string>
    <string name="ITE_4">Year 4</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="first_title">Orientation</string>
    <string name="first_des">02 December 2024</string>
    <string name="second_title">Khmer New Year</string>
    <string name="second_des">14 April 2025</string>
    <string name="footer">ITE APP, v.1.0.11</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="firstName">First Name</string>
    <string name="fullName">Last Name</string>
    <string name="close_btn">Close</string>
    <string name="save_btn">Save</string>

    <style name="RoundedImageViewStyle" parent="">
        <item name="cornerFamily">rounded</item>
        <item name="cornerSize">12dp</item>
    </style>
</resources>


