<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgColor"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cover_profile"
            android:layout_width="match_parent"
            android:layout_height="320dp">

            <!--CoverImage-->
            <ImageView
                android:id="@+id/cover_img"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/cover_img"
                android:scaleType="centerCrop"
                android:src="@drawable/img_2"
                app:layout_constraintTop_toTopOf="parent" />
            <!--App Bar-->
            <FrameLayout
                android:id="@+id/appbar_frame"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintTop_toTopOf="parent">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/appBar" />

                <LinearLayout
                    android:id="@+id/appbar"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingHorizontal="20dp">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_activities"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/close_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/my_activities"
                        android:src="@drawable/ic_close"
                        app:tint="@color/white" />

                </LinearLayout>
            </FrameLayout>
            <!--Profile Image-->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/profileImg"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:padding="15dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:strokeColor="@android:color/white"
                app:strokeWidth="4dp">

                <ImageView
                    android:id="@+id/profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/radius_background_image"
                    android:contentDescription="@string/cover_img"
                    android:outlineProvider="background"
                    android:src="@drawable/user_profile" />
            </com.google.android.material.card.MaterialCardView>
            <!--edit icon-->
            <ImageView
                android:id="@+id/edit_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/ic_edit"
                android:padding="5dp"
                android:src="@drawable/edit_ic"
                app:layout_constraintEnd_toEndOf="@id/cover_img"
                app:layout_constraintTop_toBottomOf="@id/cover_img" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <!--Profile Name-->
        <TextView
            android:id="@+id/profileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/myName"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <!--Grade-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ITE" />

        <View
            android:layout_width="0dp"
            android:layout_height="20dp" />
        <!--Grade Year-->
        <LinearLayout
            android:id="@+id/ITE_Year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/border_radius"
            android:orientation="horizontal"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/year1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ITE_1"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="20dp"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/year2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ITE_2"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="20dp"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/year3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ITE_3"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="20dp"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/year4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ITE_4"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="25dp" />
        <!--Video-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/Thumbnail_1"
                android:layout_width="120dp"
                android:layout_height="70dp"
                android:contentDescription="@string/thumbnail"
                android:scaleType="centerCrop"
                android:src="@drawable/first_thumbnail"
                app:shapeAppearanceOverlay="@style/RoundedImageViewStyle"/>

            <View
                android:layout_width="15dp"
                android:layout_height="0dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_title"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_des"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/more_ic"
                android:contentDescription="@string/ic_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:src="@drawable/more_ic" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/Thumbnail_2"
                android:layout_width="120dp"
                android:layout_height="70dp"
                android:contentDescription="@string/thumbnail"
                android:scaleType="centerCrop"
                android:src="@drawable/kny"
                app:shapeAppearanceOverlay="@style/RoundedImageViewStyle"/>

            <View
                android:layout_width="15dp"
                android:layout_height="0dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second_title"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second_des"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/ic_edit"
                android:paddingTop="10dp"
                android:src="@drawable/more_ic" />
        </LinearLayout>
    </LinearLayout>
    <!--Footer-->
    <TextView
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/footer"
        android:textColor="@color/dark_blue" />
</LinearLayout>